--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: url(/checkpoint2/src/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg);
 }
 
 .App-logo {
